--- a/src/components/sideBar/side-bar.css
+++ b/src/components/sideBar/side-bar.css
@@ -25,8 +25,7 @@ body {
 .sidebar ul li a {
     text-decoration: none;
     color: #fff;
-    font-weight: bold;
-    font-size: 16px;
+    font-size: 2rem;
     transition: color 0.3s;
 }
 
