--- a/src/pages/match/match.css
+++ b/src/pages/match/match.css
@@ -1,3 +1,18 @@
-.page-content{
+.match-content {
+    justify-content: center;
+    align-items: center;
     display: flex;
+}
+.match-button {
+    padding: 1rem;
+    align-items: center;
+    align-content: center;
+    margin-left: 5rem;
+    margin-top: 5rem;
+}
+.match-content > h1 {
+    text-align: center;
+    position: absolute;
+    top: 10%;
+    left: 50%;
 }
